[package]
name = "hackernews-21vnmay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "1.5.0", features = ["from_url"] }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

