[package]
name = "rust-rocket-learn-kk09"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
percent-encoding = "2.1.0"
# rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
# serde = { version = "1.0.126", features = ["derive"] }
# serde_json = "1.0.64"
