[package]
name = "rusty-rocket-live-7140327"
version = "0.1.0"
authors = ["rainer"]
edition = "2018"

[dependencies]
# Rocket built from main already runs with stable
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
base64 = "0.13"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
# async-trait = "0.1.50"
# futures = "0.3.15"